--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -14,8 +14,8 @@
   padding: 0 4rem;
 }
 
-.main {
-}
+/* .main {
+} */
 
 .title {
   position: relative;
@@ -71,6 +71,7 @@
   background-color: white;
   max-width: 370px;
   position: relative;
+  box-shadow: 4px 22px 22px -4px rgba(77, 139, 233, 0.25);
 }
 
 .info:after {
