--- a/src/Components/SkillItem/SkillItem.module.css
+++ b/src/Components/SkillItem/SkillItem.module.css
@@ -1,1 +1,22 @@
+.box {
+  max-width: 30rem;
+  text-align: center;
+}
 
+.content h2 {
+  font-size: 2rem;
+  color: var(--color-pink);
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+.content p {
+  color: white;
+  font-size: 1.5rem;
+}
+
+@media (max-width: 1440) {
+  .box {
+    text-align: center;
+  }
+}
