--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,12 @@ html {
   font-size: 62.5%;
 }
 
+@media (max-width: 500px) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body,
 html {
   box-sizing: border-box;
