--- a/src/Components/Cards/Cards.module.css
+++ b/src/Components/Cards/Cards.module.css
@@ -7,12 +7,14 @@
 .image {
   border: 2px solid var(--color-delicius);
   border-right: none;
+  display: flex;
 }
 
 .image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  max-height: 400px;
 }
 
 .content {
@@ -36,6 +38,7 @@
   display: flex;
   align-items: center;
   gap: 1rem;
+  flex-wrap: wrap;
 }
 
 .tags li {
@@ -55,7 +58,6 @@
   font-weight: 500;
   font-style: italic;
   font-size: 1rem;
-  width: 50%;
   color: black;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -99,4 +101,25 @@
 
 .buttons a:first-child {
   padding: 1rem 2rem;
+}
+
+@media (max-width: 1440px) {
+  .image img {
+    object-fit: unset;
+  }
+}
+
+@media (max-width: 1050px) {
+  .item {
+    grid-template-columns: 1fr;
+  }
+
+  .image {
+    border-bottom: 0;
+    border-right: inset;
+  }
+
+  .buttons {
+    margin-right: 0;
+  }
 }
