--- a/src/Components/Skills/Skills.module.css
+++ b/src/Components/Skills/Skills.module.css
@@ -11,12 +11,14 @@
 
 .title {
   text-align: center;
+  margin-bottom: 10rem;
 }
 
 .title h1 {
   color: var(--color-pink);
   font-size: 2.5rem;
   margin-bottom: 1rem;
+  font-weight: 500;
 }
 
 .title p {
@@ -24,4 +26,19 @@
   font-size: 2rem;
   width: 45%;
   margin: 0 auto;
+}
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 4.5rem;
+  justify-content: center;
+}
+
+@media (max-width: 1440px) {
+  .title p {
+    width: 100%;
+    max-width: 440px;
+  }
 }
